added examples of concatenate

--- a/TechLadyHackathon_Intro_to_R_presentation.Rmd
+++ b/TechLadyHackathon_Intro_to_R_presentation.Rmd
@@ -2,6 +2,9 @@
 title: "Intro to R"
 output: ioslides_presentation
 ---
+```{r, echo=FALSE}
+library(ggplot2)
+```
 ## Slide 1: Overview
 * What is R?
 * Installing and Setting up R 
@@ -102,7 +105,22 @@ c("Christina", "Leah", "Shanoon", "Adriana")
 * words or characters must be enclosed in quotations otherwise R will complain
 * capitalization is important
 
-## Slide 13: Side Trip: Variables
+## Slide 13a: Examples of c()
+* used to pass multiple arguments when a function only takes one. i.e.
+```{r, eval = FALSE}
+subset(mtcars, select = wt)
+subset(mtcars, select = c("wt", "carb"))
+```
+
+## Slide 13b: Examples of c()
+* useful when visualizing data to set color or other parameters
+```{r, eval=TRUE}
+cyl_col <- c("red", "blue", "green")
+qplot(mpg, wt, data = mtcars, colour = factor(cyl)) + 
+scale_colour_manual(values = cyl_col)
+```
+
+## Slide 14: Side Trip: Variables
 * assigning vectors, data frames and lists to variables allows us to manipulate them
 ```{r}
 tech_ladies <- c("Christina", "Leah", "Shanoon", "Adriana")
@@ -115,14 +133,14 @@ tech_ladies2 = c("Christina", "Leah", "Shanoon", "Adriana")
 tech_ladies
 ```
 
-## Slide 14: Side Trip: Variables
+## Slide 15: Side Trip: Variables
 * careful not to accidently change your variables
 ```{r}
 tech_ladies <- "Stephen"
 tech_ladies
 ```
 
-## Slide 15a: Modifying Vectors (1 of 2)
+## Slide 16a: Modifying Vectors (1 of 2)
 * add to a vector with c()
 ```{r} 
 tech_ladies2 <- c(tech_ladies2, "Maria")
@@ -133,7 +151,7 @@ tech_ladies2[3] <- "Sarah"
 tech_ladies2
 ```
 
-## Slide 15b: Modifying Vectors (2 of 2)
+## Slide 16b: Modifying Vectors (2 of 2)
 * delete a value (slightly more complicated)
 ```{r}
 remove <- "Adriana"
@@ -141,7 +159,7 @@ tech_ladies2 <- tech_ladies2[! tech_ladies2 %in% remove]
 tech_ladies2
 ```
 
-## Slide 16: Data Frames
+## Slide 17: Data Frames
 * ordered collection of vectors
 * columns are the variables or attributes in your data set
 * rows are the observations
@@ -150,7 +168,7 @@ tech_ladies2
 head(mtcars)
 ```
 
-## Slide 17: Creating Data Frames:
+## Slide 18: Creating Data Frames:
 * data.frame(x = x, y = y)
 * as.data.frame(table)
 * read.csv()
@@ -162,14 +180,14 @@ hec <- as.data.frame(HairEyeColor)
 #dat <- read.csv() ## we'll see this in a bit. 
 ```
 
-## Slide 18: Factor Variables
+## Slide 19: Factor Variables
 * specific to data frames
 * special because sometimes they are required, sometime they interfere. 
 ```{r}
 str(hec)
 ```
 
-## Slide 19a: Subsetting DF (1 of 3)
+## Slide 20a: Subsetting DF (1 of 3)
 * subset(data, boolean, select = desired_columns)
 * [row, column]
 * [row == x, column == y]
@@ -177,19 +195,19 @@ str(hec)
 head(hec)
 ```
 
-## Slide 19b: Subsetting DF (2 of 3)
+## Slide 20b: Subsetting DF (2 of 3)
 ```{r}
 subset(hec, Hair == "Red")
 subset(hec, select = "Eye")
 ```
 
-## Slide 19c: Subsetting DF (3 of 3)
+## Slide 20c: Subsetting DF (3 of 3)
 ```{r}
 hec[5,3]
 hec[, "Sex"]
 ```
 
-## Slide 20a: Lists (1 of 2)
+## Slide 21a: Lists (1 of 2)
 * like vectors but can have distinct data types including data frames and other lists
 * useful for splitting and iterating over
 ```{r}
@@ -197,20 +215,20 @@ hec_split <- split(hec, hec$Eye)
 str(hec_split)
 ```
 
-## Slide 20b: Lists (2 of 2)
+## Slide 21b: Lists (2 of 2)
 ```{r}
 tots <- lapply(hec_split, function(x) sum(x$Freq))
 tots
 ```
 
-## Slide 21: Reading in data:
+## Slide 22: Reading in data:
 * read.csv()
 ```{r}
-pur <- read.csv("./data//Purchase_order_FY15.csv", stringsAsFactors = FALSE)
+pur <- read.csv("~/Documents/data\ files/Purchase_order_FY15.csv", stringsAsFactors = FALSE)
 str(pur)
 ```
 
-## Slide 22a: Data Sets (1 of 2)
+## Slide 23a: Data Sets (1 of 2)
 * DC Open Data [link] (http://data.octo.dc.gov/)
 * NYC Open Data [link] (https://nycopendata.socrata.com/)
 * Data.gov [link] (http://catalog.data.gov/dataset?groups=businessusa4208#topic=business_navigation)
@@ -219,13 +237,13 @@ str(pur)
 * UN Data [link] (https://data.un.org/DataMartInfo.aspx)
 * Data Science Central (warehouse for data sets, many are the same as those above) [link] (http://www.datasciencecentral.com/profiles/blogs/the-free-big-data-sources-everyone-should-know)
 
-## Slide 22b: Data Sets (2 of 2)
+## Slide 23b: Data Sets (2 of 2)
 * KD nuggests (also a warehouse for sources of public data sets) [link] (http://www.kdnuggets.com/datasets/index.html)
 * Quora (yet another warehouse) [link] (http://www.quora.com/Where-can-I-find-large-datasets-open-to-the-public)
 * UCI Machine Learning Rpository [link] (http://archive.ics.uci.edu/ml/)
 * The Guardian Data Blog (make data sets available) [link] (http://www.theguardian.com/data/all)
 
-## Slide 23: Learning Resources/R Blogs:
+## Slide 24: Learning Resources/R Blogs:
 * Rbloggers
 * Stackoverflow
 * Coursera Data Analysis and Statistical Inference
